unpackaged/main/default/objects/WS_ProductFields__c/WS_ProductFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Product Fields</label>
</CustomObject>