unpackaged/main/default/objects/WS_ProductFields__c/fields/collection__c.field-meta.xml
<CustomField>
    <fullName>collection__c</fullName>
    <label>collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>