unpackaged/main/default/objects/WS_ProductFields__c/fields/collection_id__c.field-meta.xml
<CustomField>
    <fullName>collection_id__c</fullName>
    <label>collection_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>