unpackaged/main/default/objects/WS_ProductFields__c/fields/color_v3__c.field-meta.xml
<CustomField>
    <fullName>color_v3__c</fullName>
    <label>color_v3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>