unpackaged/main/default/objects/WS_ProductFields__c/fields/colorv3id__c.field-meta.xml
<CustomField>
    <fullName>colorv3id__c</fullName>
    <label>color_v3_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>