unpackaged/main/default/objects/WS_ProductFields__c/fields/CurrencyIsoCode_s__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode_s__c</fullName>
    <label>CurrencyIsoCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>