unpackaged/main/default/objects/WS_ProductFields__c/fields/Description_s__c.field-meta.xml
<CustomField>
    <fullName>Description_s__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>