unpackaged/main/default/objects/WS_ProductFields__c/fields/function__c.field-meta.xml
<CustomField>
    <fullName>function__c</fullName>
    <label>function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>