unpackaged/main/default/objects/WS_ProductFields__c/fields/function_id__c.field-meta.xml
<CustomField>
    <fullName>function_id__c</fullName>
    <label>function_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>