unpackaged/main/default/objects/WS_ProductFields__c/fields/id_line__c.field-meta.xml
<CustomField>
    <fullName>id_line__c</fullName>
    <label>id_line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>