unpackaged/main/default/objects/WS_ProductFields__c/fields/lifecycle__c.field-meta.xml
<CustomField>
    <fullName>lifecycle__c</fullName>
    <label>lifecycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>