unpackaged/main/default/objects/WS_ProductFields__c/fields/lifecycle_id__c.field-meta.xml
<CustomField>
    <fullName>lifecycle_id__c</fullName>
    <label>lifecycle_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>