unpackaged/main/default/objects/WS_ProductFields__c/fields/line__c.field-meta.xml
<CustomField>
    <fullName>line__c</fullName>
    <label>line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>