unpackaged/main/default/objects/WS_ProductFields__c/fields/macrofunction__c.field-meta.xml
<CustomField>
    <fullName>macrofunction__c</fullName>
    <label>macrofunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>