unpackaged/main/default/objects/WS_ProductFields__c/fields/macrofunction_id__c.field-meta.xml
<CustomField>
    <fullName>macrofunction_id__c</fullName>
    <label>macrofunction_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>