unpackaged/main/default/objects/WS_ProductFields__c/fields/materialv3__c.field-meta.xml
<CustomField>
    <fullName>materialv3__c</fullName>
    <label>material_v3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>