unpackaged/main/default/objects/WS_ProductFields__c/fields/materialv3id__c.field-meta.xml
<CustomField>
    <fullName>materialv3id__c</fullName>
    <label>material_v3_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>