unpackaged/main/default/objects/WS_ProductFields__c/fields/modelid__c.field-meta.xml
<CustomField>
    <fullName>modelid__c</fullName>
    <label>model_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>