unpackaged/main/default/objects/WS_ProductFields__c/fields/Name_s__c.field-meta.xml
<CustomField>
    <fullName>Name_s__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>