unpackaged/main/default/objects/WS_ProductFields__c/fields/NbOfWheel__c.field-meta.xml
<CustomField>
    <fullName>NbOfWheel__c</fullName>
    <label>NbOfWheel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>