unpackaged/main/default/objects/WS_ProductFields__c/fields/new_description__c.field-meta.xml
<CustomField>
    <fullName>new_description__c</fullName>
    <label>new_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>