unpackaged/main/default/objects/WS_ProductFields__c/fields/newdescription__c.field-meta.xml
<CustomField>
    <fullName>newdescription__c</fullName>
    <label>new_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>