unpackaged/main/default/objects/WS_ProductFields__c/fields/not_saleable__c.field-meta.xml
<CustomField>
    <fullName>not_saleable__c</fullName>
    <label>not_saleable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>