unpackaged/main/default/objects/WS_ProductFields__c/fields/ProductCode_s__c.field-meta.xml
<CustomField>
    <fullName>ProductCode_s__c</fullName>
    <label>ProductCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>