unpackaged/main/default/objects/WS_ProductFields__c/fields/SegmentationCategory__c.field-meta.xml
<CustomField>
    <fullName>SegmentationCategory__c</fullName>
    <label>SegmentationCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>