unpackaged/main/default/objects/WS_ProductFields__c/fields/size_id__c.field-meta.xml
<CustomField>
    <fullName>size_id__c</fullName>
    <label>size_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>