unpackaged/main/default/objects/WS_ProductFields__c/fields/sizeid__c.field-meta.xml
<CustomField>
    <fullName>sizeid__c</fullName>
    <label>size_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>