unpackaged/main/default/objects/WS_ProductFields__c/fields/StockKeepingUnit_s__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit_s__c</fullName>
    <label>StockKeepingUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>