unpackaged/main/default/objects/WS_ProductFields__c/fields/sub_lifecycle__c.field-meta.xml
<CustomField>
    <fullName>sub_lifecycle__c</fullName>
    <label>sub_lifecycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>