unpackaged/main/default/objects/WS_ProductFields__c/fields/subcollection__c.field-meta.xml
<CustomField>
    <fullName>subcollection__c</fullName>
    <label>subcollection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>