unpackaged/main/default/objects/WS_ProductFields__c/fields/subcollection_id__c.field-meta.xml
<CustomField>
    <fullName>subcollection_id__c</fullName>
    <label>subcollection_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>