unpackaged/main/default/objects/WS_ProductFields__c/fields/subcollectionid__c.field-meta.xml
<CustomField>
    <fullName>subcollectionid__c</fullName>
    <label>subcollection_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>