unpackaged/main/default/objects/WS_ProductFields__c/fields/sublifecycle__c.field-meta.xml
<CustomField>
    <fullName>sublifecycle__c</fullName>
    <label>sub_lifecycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>