unpackaged/main/default/objects/WS_ProductFields__c/fields/sublifecycleid__c.field-meta.xml
<CustomField>
    <fullName>sublifecycleid__c</fullName>
    <label>sub_lifecycle_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>