unpackaged/main/default/objects/WS_ProductFields__c/fields/warranty__c.field-meta.xml
<CustomField>
    <fullName>warranty__c</fullName>
    <label>warranty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>