unpackaged/main/default/objects/WS_ProductFields__c/fields/warranty_id__c.field-meta.xml
<CustomField>
    <fullName>warranty_id__c</fullName>
    <label>warranty_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>