unpackaged/main/default/objects/WS_ProductFields__c/fields/warrantyid__c.field-meta.xml
<CustomField>
    <fullName>warrantyid__c</fullName>
    <label>warranty_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>